--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-body,html {
+body,
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
-    background: #EEEEEE;
+    background: #eeeeee;
     color: #333333;
 
     height: 100vh;
@@ -14,13 +15,13 @@ body,html {
     overflow: hidden;
 
     font-family: "M PLUS Rounded 1c", sans-serif;
-
 }
 
-header, .frames-container, footer{
+header,
+.frames-container,
+footer {
     padding-left: min(12.5rem, 5%);
     padding-right: min(12.5rem, 5%);
-
 }
 
 header {
@@ -32,7 +33,7 @@ header {
 
     padding-top: 20px;
     padding-bottom: 20px;
-    
+
     /* z-index: 10; */
 }
 
@@ -40,8 +41,8 @@ header .logo {
     height: 2rem;
 }
 
-header span{
-  font-size: 1rem;
+header span {
+    font-size: 1rem;
 }
 
 .frames-container {
@@ -50,7 +51,7 @@ header span{
     display: flex;
     overflow: visible;
     justify-content: center;
-
+    height: 75vh;
     /* z-index: 10; */
 }
 
@@ -75,85 +76,83 @@ header span{
     z-index: 2;
 }
 
-
-#welcome .text{
-  font-weight: 300;
-  font-size: clamp(4.25rem, 10vw, 6.875rem);
+#welcome .text {
+    font-weight: 300;
+    font-size: clamp(4.25rem, 10vw, 6.875rem);
 }
 
-#welcome .content{
+#welcome .content {
     width: min(670px, 90%);
 }
 
-#about-me .content{
-    width: 90%;
+#about-me .content {
+    width: 90vw;
 }
 
-#stack .content{
-  width: 80%;
+#stack .content {
+    width: 80vw;
 }
 
+#stack .card {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 
-#stack .card{
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-
-  width: 18%;
-  height: 40%;
-  /* padding: 1em 1.625em; */
-  /* background: #ffffff; */
-  border-radius: 1em;
-  /* box-shadow: 0 1em 1em rgba(0, 0, 0, 0.2); */
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Увеличили время */
-  transform-style: preserve-3d;
-  perspective: 50em; /* Сильнее перспектива */
-  will-change: transform; /* Оптимизация для плавности */
+    width: 18%;
+    height: 40%;
+    /* padding: 1em 1.625em; */
+    /* background: #ffffff; */
+    border-radius: 1em;
+    /* box-shadow: 0 1em 1em rgba(0, 0, 0, 0.2); */
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transition:
+        transform 0.3s ease,
+        box-shadow 0.3s ease; /* Увеличили время */
+    transform-style: preserve-3d;
+    perspective: 50em; /* Сильнее перспектива */
+    will-change: transform; /* Оптимизация для плавности */
 }
 
-#stack{
-  overflow-y: none;
+#stack {
+    overflow-y: none;
 }
 
-#stack .stack_name{
-  font-weight: 400;
-  /* font-size: 2.625rem; */
-  font-size: clamp(1.625rem, 3vw, 2.625rem);
-  line-height: 120%;
+#stack .stack_name {
+    font-weight: 400;
+    /* font-size: 2.625rem; */
+    font-size: clamp(1.625rem, 3vw, 2.625rem);
+    line-height: 120%;
 }
 
-#stack .stack_yo_exp{
-  font-size: 1rem;
-  line-height: 135%;
+#stack .stack_yo_exp {
+    font-size: 1rem;
+    line-height: 135%;
 }
 
-#stack .content img{
-  /* height: 4em; */
-  height: 30%;
+#stack .content img {
+    /* height: 4em; */
+    height: 30%;
 }
 
-#stack .stack_content{
-  gap: 0.5em;
-  display: flex;
-  flex-direction: column;
+#stack .stack_content {
+    gap: 0.5em;
+    display: flex;
+    flex-direction: column;
 }
 
-#stack #stack_container{
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  direction: ltr;
-  justify-content: center;
-  gap: 1rem;  
+#stack #stack_container {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    direction: ltr;
+    justify-content: center;
+    gap: 1rem;
 }
 
 @media (max-height: 1200px) {
-  
 }
-
 
 /* Контент фрейма */
 .content {
@@ -162,6 +161,11 @@ header span{
     justify-content: center;
 }
 
+header .btn {
+    border: none;
+    background-color: none;
+    cursor: pointer;
+}
 
 /* Футер */
 footer {
@@ -173,29 +177,29 @@ footer {
     padding: 10px 0;
 }
 
-.btn {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: none;
-  border: none;
-  padding: 1rem 1.625rem;
-  font-size: 1rem;
-  cursor: pointer;
-  align-items: center;
-  border-radius: 0.25em;
-  position: relative;
-  transition: 0.3s;
+footer .btn {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: none;
+    border: none;
+    padding: 1rem 1.625rem;
+    font-size: 1rem;
+    cursor: pointer;
+    align-items: center;
+    border-radius: 0.25em;
+    position: relative;
+    transition: 0.3s;
 }
 
-footer .btn img{
-  display: none;
+footer .btn img {
+    display: none;
 }
 
-.btn.active{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+footer .btn.active {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     background: none;
     border: none;
     padding: 1rem 1.625rem;
@@ -207,41 +211,43 @@ footer .btn img{
     transition: 0.3s;
 }
 
-.btn.active::after{
-  content: '';
-  position: absolute;
-  bottom: -1rem; 
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0.6rem;
-  height: 0.6rem;
-  background-color: #333;
-  border-radius: 50%;
-  opacity: 1;
+footer .btn.active::after {
+    content: "";
+    position: absolute;
+    bottom: -1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0.6rem;
+    height: 0.6rem;
+    background-color: #333;
+    border-radius: 50%;
+    opacity: 1;
 }
 
-.btn:hover {
-  box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1);
-  box-shadow: -10px -10px -10px white;
+footer .btn:hover {
+    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: -10px -10px -10px white;
 }
 
-.btn::after {
-  content: '';
-  position: absolute;
-  bottom: -1rem; 
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0.6rem;
-  height: 0.6rem;
-  background-color: #333;
-  border-radius: 50%;
-  opacity: 0;
-  transition: opacity 0.3s, transform 0.3s;
+footer .btn::after {
+    content: "";
+    position: absolute;
+    bottom: -1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0.6rem;
+    height: 0.6rem;
+    background-color: #333;
+    border-radius: 50%;
+    opacity: 0;
+    transition:
+        opacity 0.3s,
+        transform 0.3s;
 }
 
-.btn:hover::after {
-  opacity: 1;
-  transform: translateX(-50%) translateY(8px); 
+footer .btn:hover::after {
+    opacity: 1;
+    transform: translateX(-50%) translateY(8px);
 }
 
 .hidden {
@@ -249,22 +255,19 @@ footer .btn img{
 }
 
 ::selection {
-  background-color: #333333; 
-  color: white; 
+    background-color: #333333;
+    color: white;
 }
-
 
 ::-webkit-selection {
-  background-color: #333333; 
-  color: white;
+    background-color: #333333;
+    color: white;
 }
 
-
-#typing-text{
-   font-weight: 300;
-   font-size: clamp(26px, 5vw, 68px);
+#typing-text {
+    font-weight: 300;
+    font-size: clamp(26px, 5vw, 68px);
 }
-
 
 /*Короче триугольни вверх, вниз вот так то да*/
 
@@ -290,59 +293,54 @@ footer .btn img{
     }
 }
 
-
 @media (hover: none) and (pointer: coarse) {
-  #stack_container {
-      -webkit-overflow-scrolling: touch; /* Плавный скроллинг для iOS */
-  }
+    #stack_container {
+        -webkit-overflow-scrolling: touch; /* Плавный скроллинг для iOS */
+    }
 }
 
-
 @media (max-width: 800px) {
+    #stack_container {
+        flex-wrap: wrap; /* Разрешаем перенос элементов */
+        flex-direction: column; /* Строим элементы сверху вниз */
+        max-height: 80vh; /* Ограничиваем высоту */
+        gap: 1rem; /* Расстояние между элементами */
+        overflow-x: auto;
+        scroll-behavior: smooth;
+    }
 
-  #stack_container{
-    flex-wrap: wrap; /* Разрешаем перенос элементов */
-    flex-direction: column; /* Строим элементы сверху вниз */
-    max-height: 80vh; /* Ограничиваем высоту */ 
-    gap: 1rem; /* Расстояние между элементами */
-    overflow-x: auto;
-    scroll-behavior: smooth;
-  }
+    #stack_container .card {
+        width: 9rem;
+        padding: 1rem;
+    }
 
+    #stack_container > * {
+        flex: 0 0 auto; /* Отключаем автоматическое растягивание */
+    }
 
-  #stack_container .card{
-    width: 9rem;
-    padding: 1rem;
-  }
+    footer .btn img {
+        display: flex;
+    }
 
-  #stack_container > * {
-    flex: 0 0 auto; /* Отключаем автоматическое растягивание */
-  }
+    footer {
+        gap: 1rem;
+    }
 
-  footer .btn img{
-    display: flex;
-  }
+    footer .btn {
+        font-size: 0;
+        padding: 1rem;
+    }
 
-  footer{
-    gap: 1rem;
-  }
+    footer .btn.active {
+        font-size: 0;
+        padding: 1rem;
+    }
 
-  footer .btn{
-    font-size: 0;
-    padding: 1rem;
-  }
+    .btn::after {
+        /* display: none; */
+    }
 
-  footer .btn.active{
-    font-size: 0;
-    padding: 1rem;
-  }
-
-
-  .btn::after {
-    /* display: none; */
-  }
-
-  .btn.active{
-    padding: 1rem;
-  }
+    .btn.active {
+        padding: 1rem;
+    }
 }
