--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,12 @@
 }
 
 :root {
-
-
-    --frame-size: ;
-
     --color-background: #F7F7F7;
-    --color-text: #333333;
+    --color-background-dark: #000;
+    --color-text: #070707;
+    --color-text-dark: #DFE9FF;
     --color-white: #fff;
+    --color-dark: #171717;
     --color-shadow: rgba(0, 0, 0, 0.2);
 
 
@@ -59,6 +58,12 @@ html {
     overflow: hidden;
 }
 
+body.dark{
+    background: var(--color-background-dark);
+    color: var(--color-text-dark);
+    transition: var(--transition-default);
+}
+
 #typing-text {
     font-weight: 300;
     font-size: var(--font-size-large);
@@ -93,13 +98,45 @@ header {
     margin: 0 7%;
 }
 
-header .logo {
-    height: 2rem;
+header .logo {height: 2rem;}
+header span {font-size: 1rem;}
+
+
+.logo .logo-path.dark{
+    stroke: var(--color-text-dark);
+    transition: var(--transition-default);
 }
 
-header span {
-    font-size: 1rem;
+.theme-icon .lamp-path.dark{
+    stroke: var(--color-background-dark);
+    fill: #707070;
+    transition: var(--transition-default);
 }
+
+.theme-icon .lamp-start.dark{
+    stop-color: #707070;
+    transition: var(--transition-default);
+}
+
+.theme-icon .lamp-stop.dark{
+    stop-color: var(--color-dark);
+    transition: var(--transition-default);
+}
+
+.btns{
+    display: flex;
+    width: 35%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ .theme-icon{
+    position: absolute;
+    height: 12em;  
+    top: 0px;
+    z-index: 10;
+}
+
 
 .frames-container {
     flex: 1;
@@ -127,6 +164,10 @@ header span {
     background-color: var(--color-white);
     border-radius: 40px;
     z-index: 1;
+}
+
+.frame.dark{
+    background-color: var(--color-dark);
 }
 
 .frame.active {
@@ -240,6 +281,7 @@ header span {
     position: relative;
 }
 
+
 .project-card img {
     height: 100%;
     width: auto;
@@ -261,15 +303,28 @@ header span {
 
 .project-card h2 {
     font-size: clamp(1.25rem, 2vw, 2rem);
-    color: #000000;
     margin: 10px 0;
 }
 
 .project-card p {
     font-size: 1rem;
     line-height: 1.2rem;
-    color: #000000;
 }
+
+.project-text {
+    color: var(--color-text);
+}
+
+.project-text.dark {
+    color: var(--color-text-dark);
+    transition: var(--transition-default);
+}
+
+.project-card.dark {
+    background: var(--color-dark);
+    transition: var(--transition-default);
+}
+
 
 .project-card .stacks-for-project {
     display: flex;
@@ -277,8 +332,9 @@ header span {
     gap: 0.25rem;
 }
 
+
 .project-card .stack-for-project {
-    padding: 0.25rem 0.5rem;
+    padding: 0.5rem 0.75rem;
     border-radius: 2rem;
     background-color: rgba(0, 0, 0, 0.05);
 }
@@ -334,6 +390,13 @@ p.about {
     --swiper-navigation-color: black !important;
 }
 
+.swiper-button-prev,
+.swiper-button-next.dark {
+    --swiper-navigation-color: var(--color-text-dark) !important;
+    transition: var(--transition-default);
+}
+
+
 .contacts {
     display: flex;
     flex-direction: row;
@@ -361,11 +424,6 @@ p.about {
     text-decoration: none;
 }
 
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
 /* Футер */
 footer {
@@ -375,7 +433,7 @@ footer {
     height: 20%;
     width: 86%;
     margin: 0 7%;
-    gap: 2%;
+    gap: 3.3%;
     padding: 10px 0;
 }
 
@@ -391,9 +449,16 @@ footer .btn {
     font-size: var(--font-size-medium);
     cursor: pointer;
     align-items: center;
-    width: 23.5%;
+    width: 30%;
     border-radius: 4px;
     position: relative;
+    transition: var(--transition-default);
+}
+
+
+footer .btn.dark {
+    background-color: var(--color-dark);
+    color: var(--color-text-dark);
     transition: var(--transition-default);
 }
 
